# Taller-Veiga

CS2D/: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeListsTemplate.txt  Makefile  README.md  cs2d_setup.sh
CS2D/assets/: Readme.txt
CS2D/client/: CMakeLists.txt  app.h  main.cpp
CS2D/client/exception/: closed_app.h  closed_game.h
CS2D/client/game/: CMakeLists.txt  application.cpp  application.h  cs2d_app.cpp  cs2d_app.h
CS2D/client/game/animation/: animation.cpp  animation.h  animation_details.cpp  animation_details.h  bomb_explosion_animation.cpp  bomb_explosion_animation.h  framed_animation.cpp  framed_animation.h  interpolated_animation.cpp  interpolated_animation.h  iterative_animation.cpp  iterative_animation.h  muzzle_fire_animation.cpp  muzzle_fire_animation.h  progress_bar_animation.cpp  progress_bar_animation.h  winner_team_message_animation.cpp  winner_team_message_animation.h
CS2D/client/game/asset/: animation_id.h  asset_generator.cpp  asset_generator.h  asset_loader.cpp  asset_loader.h  asset_manager.cpp  asset_manager.h  cursor_id.h  cursor_manager.cpp  cursor_manager.h  font_id.h  sound_id.h  texture_id.h
CS2D/client/game/command/: base_command.cpp  base_command.h  buy_weapon_command.cpp  buy_weapon_command.h  composite_command.cpp  composite_command.h  leave_game_command.cpp  leave_game_command.h  pick_role_command.cpp  pick_role_command.h  quit_command.cpp  quit_command.h  switch_context_command.cpp  switch_context_command.h
CS2D/client/game/context/: base_context.cpp  base_context.h  context_manager.cpp  context_manager.h  in_game_context.cpp  in_game_context.h  loading_context.cpp  loading_context.h  menu_context.cpp  menu_context.h  pick_role_context.cpp  pick_role_context.h  shop_context.cpp  shop_context.h  stats_context.cpp  stats_context.h
CS2D/client/game/controller/: base_controller.cpp  base_controller.h  game_controller.cpp  game_controller.h  receiver.cpp  receiver.h  sender.cpp  sender.h  subsystem_manager.cpp  subsystem_manager.h
CS2D/client/game/dto_handler/: dto_creator_visitor.cpp  dto_creator_visitor.h
CS2D/client/game/entity/: button.cpp  button.h  horizontal_pane.cpp  horizontal_pane.h  label.cpp  label.h  pane.cpp  pane.h  smart_pane.cpp  smart_pane.h  vertical_pane.cpp  vertical_pane.h
CS2D/client/game/event/: buy_ammo_event.cpp  buy_ammo_event.h  buy_weapon_event.cpp  buy_weapon_event.h  create_game_event.cpp  create_game_event.h  defuse_bomb_event.cpp  defuse_bomb_event.h  drop_weapon_event.cpp  drop_weapon_event.h  end_of_game_event.cpp  end_of_game_event.h  event.cpp  event.h  events.h  generate_map_event.cpp  generate_map_event.h  join_game_event.cpp  join_game_event.h  leave_game_event.cpp  leave_game_event.h  movement_event.cpp  movement_event.h  pick_role_event.cpp  pick_role_event.h  quit_event.cpp  quit_event.h  reload_event.cpp  reload_event.h  request_games_list_event.cpp  request_games_list_event.h  request_maps_event.cpp  rotation_event.cpp  (+23 more)
CS2D/client/lobby/: CMakeLists.txt  lobby_app.cpp  lobby_app.h  main_window.cpp  main_window.h  main_window.ui  resources.qrc
CS2D/client/net/: CMakeLists.txt  client_protocol.cpp  client_protocol.h
CS2D/common/: CMakeLists.txt  asset_addresser.cpp  asset_addresser.h  definitions.h  event_type.h  game_state.h  overloaded.h  periodic_clock.cpp  periodic_clock.h  queue.h  role_id.h  round_state.h  slot_id.h  socket.cpp  team.h  weapon_id.h
CS2D/common/DTO/: CMakeLists.txt  config_dto.h  drop_weapon_dto.cpp  drop_weapon_dto.h  dto_code.h  dto_variant.h  event_dto.h  game_info_dto.h  game_list_dto.h  game_state_dto.cpp  game_state_dto.h  map_dto.h  map_name_list_dto.h  player_dto.cpp  player_dto.h  player_id_dto.h  round_dto.cpp  round_dto.h  team_id_dto.h  weapon_dto.cpp  weapon_dto.h
CS2D/common/model/: CMakeLists.txt  player.cpp  player.h  vector_2d.cpp  vector_2d.h  weapon.cpp  weapon.h
CS2D/docs/: Documentación Técnica.md  manual del proyecto.md
CS2D/editor/: CMakeLists.txt  main.cpp
CS2D/editor/menu/: CMakeLists.txt  main_window.cpp  main_window.h  main_window.ui
CS2D/editor/scenes/: CMakeLists.txt  constants.h  grid_item.cpp  grid_item.h  grid_view.cpp  grid_view.h  map_editor_widget.cpp  map_editor_widget.h  map_serializer.cpp  map_serializer.h  menu_widget.cpp  menu_widget.h
CS2D/editor/widgets/: CMakeLists.txt  styled_button.h  styled_file_dialog.h  styled_line_edit.h
CS2D/server/: CMakeLists.txt  game_config.yaml  main.cpp
CS2D/server/events/: events.h
CS2D/server/exception/: invalid_game_exception.h  invalid_player_exception.h
CS2D/server/game/: CMakeLists.txt  game.cpp  game.h  game_logic.cpp  game_logic.h  game_manager.cpp  game_manager.h  movement_system.cpp  movement_system.h  round.cpp  round.h  shop.cpp  shop.h  shot_manager.cpp  shot_manager.h  weapon_factory.cpp  weapon_factory.h
CS2D/server/maps/: de_icestorm.yaml  de_outside.yaml  de_temple.yaml  de_testing.yaml
CS2D/server/net/: CMakeLists.txt  acceptor.cpp  acceptor.h  client_handler.cpp  client_handler.h  client_handler_sender.cpp  client_handler_sender.h  server.cpp  server.h  server_protocol.cpp  server_protocol.h
CS2D/server/parser/: types.h  yaml_addresser.cpp  yaml_addresser.h  yaml_parser.cpp  yaml_parser.h
CS2D/tests/: CMakeLists.txt  create_game_test.cpp  game_info_test.cpp  game_state_test.cpp  map_tiles_test.cpp  maps_name_test.cpp  movement_test.cpp
(+222 files in other folders)
